Fixed the embed video width issue on mobile

--- a/src/styles/editor/_media-uploader.scss
+++ b/src/styles/editor/_media-uploader.scss
@@ -232,3 +232,9 @@
     margin-bottom: 16px;
   }
 }
+
+.ne-embed-modal-wrapper{
+  @media screen and (max-width: 767px) {
+    width: 95vw !important;
+  }
+}
